--- a/space/styles.css
+++ b/space/styles.css
@@ -59,6 +59,7 @@ p{
     background-color: transparent;
     border: solid 0.1vw white;
     color: white;
+    cursor: pointer;
 }
 .buttons:hover {
     background-color: white;
